# doom

./: .gitignore  .markdownlint.yaml  Cargo.toml  README.md  benchmark.sh  constants.ts  cspell.config.yaml  debug.ts  demo.md  doom.ts  global.d.ts  heart.ts  helpers.ts  package.json  pnpm-lock.yaml  todo.txt  tsconfig.base.json  tsconfig.force.json  tsconfig.json  tsconfig.test.json
examples/: README.md  conway.c  conway.ts  heart.ts
examples/conway-stateful/: conway.c
examples/conway-stateless/: conway.c  conway.d.ts  conway.ts  test.d.ts
patches/: @biomejs__js-api@0.3.0-nightly.cfef948.patch  type-testing@0.2.0.patch  typescript@5.3.3.patch  typescript@5.6.3.patch
src/: binary.ts  david-blass-incredibleness.d.ts  david-blass-incredibleness.ts  fragment.rs  fuel.wat  generic_parameter.rs  handle_instructions.rs  handle_module.rs  instructions.ts  m2.ts  main.rs  memory.ts  metering.rs  module.ts  parameter.rs  program.d.ts  program.ts  raise-the-recursion-limit-to-one-nonillion-lol.ts  source_file.rs  source_line.rs  state.d.ts  state.ts  statement.rs  stats.rs  type_constraint.rs  type_definition.rs  types.d.ts  update.ts  utils.rs  utils.ts  wasmer_middleware.rs  wat_to_dts.rs
src/conformance/: add-not-folded.expected.d.ts  add-not-folded.test.ts  add-not-folded.wat  add.dump  add.test.ts  add.wasm  add.wat  andarist.actual.d.ts  andarist.dump  andarist.expected.d.ts  andarist.md  andarist.test.ts  andarist.wasm  andarist.wat  br-if.actual.d.ts  br-if.dump  br-if.expected.d.ts  br-if.test.ts  br-if.wasm  br-if.wat  call.dump  (+44 more)
ts-playground/: tsconfig.json
(+335 files in other folders)
