[package]
name = "doom_but_typescript_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.1.0"
pretty_assertions = "1.4.0"
regex = "1.10.2"
wasm-printer = "0.1.22"
wast = "70.0.0"
wasmer = "4.2.6"
wasmer-compiler-cranelift = "4.2.6"
wasmer-middlewares = "4.2.6"
anyhow = "1.0.81"
once_cell = "1.19.0"
wasmer-types = "4.2.6"